--- a/index.html
+++ b/index.html
@@ -13,22 +13,27 @@
     </header>
 
     <main>
-        <video href="resources/video/excursion.mp4"></video>
+        <video controls autoplay width="250">
+            <source src="resources/video/excursion.mp4" type="video/mp4">
+            Sorry, your browser doesn't support embedded videos.
+        </video>
+        <br>
 
+        <h1>Your personal travel guide</h1>
+        <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
 
+        <img src="resources/images/camp.webp" alt="Photo of camp in landscape">
 
+        <img src="resources/images/phone.webp" alt="outline of a mobile phone">
 
+        <h1>Coming Soon for iPhone and Android</h1>
 
-
+        <a href="">Download Excursion (Coming soon)</a>
 
     </main>
 
-
-
-
-
-
     <footer>
+        <h3>© Excursion</h3>
 
 
     </footer>
