--- a/index.html
+++ b/index.html
@@ -2,31 +2,34 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="resources/style.css" type="text/css">
+    <link href="resources/css/style.css" rel="stylesheet"  type="text/css">
+   
     <title>Excursion</title>
 </head>
 
 <body>
     <header>
-        <h1>Discover hidden places in the world around you</h1>
+        <h1 class="title">Discover hidden places in the world around you</h1>
         <a href="">Download Excursion (Coming soon)</a>
     </header>
-
+<br>
+<br>
     <main>
-        <video controls autoplay width="250">
+        <video controls autoplay>
             <source src="resources/video/excursion.mp4" type="video/mp4">
             Sorry, your browser doesn't support embedded videos.
         </video>
         <br>
 
-        <h1>Your personal travel guide</h1>
+        <h1 class="sub_title">Your personal travel guide</h1>
         <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
 
         <img src="resources/images/camp.webp" alt="Photo of camp in landscape">
-
+        <br>
+        <br>
         <img src="resources/images/phone.webp" alt="outline of a mobile phone">
 
-        <h1>Coming Soon for iPhone and Android</h1>
+        <h1 class="sub_title">Coming Soon for iPhone and Android</h1>
 
         <a href="">Download Excursion (Coming soon)</a>
 
