--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <br>
 <br>
     <main>
-        <video controls autoplay>
+        <video autoplay loop>
             <source src="resources/video/excursion.mp4" type="video/mp4">
             Sorry, your browser doesn't support embedded videos.
         </video>
